--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
       <a href="/about" class="btn btn-secondary">Read More <i class="fa fa-arrow-right"></i></a>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
-      <img src="assets/images/ece-4-all-ssf-volunteers-at-campaign-launch-2022-01-15.jpg" width="90%" height="auto" alt="Dozens of volunteers at the Pre-school for all campaign launch!" />
+      <img src="assets/images/WestSoundDSA_MayDay.jpg" width="90%" height="auto" alt="West Sound DSA rallying for May Day 2024!" />
     </div>
   </div>
   <div class="row">
