--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: default
 {% assign welcome = site.data.copy.global.welcome %}
 
 <div class="container my-5">
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-md-6 col-sm-12">
       <h1>{{ welcome }}</h1>
       <hr class="large" />
       <p>{{ about }}</p>
-      <a href="/about" class="btn btn-secondary">Read More <i class="fa fa-arrow-right"></i></a>
+      <a href="/get-involved" class="btn btn-secondary">Get Involved <i class="fa fa-arrow-right"></i></a>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
       <img src="assets/images/WestSoundDSA_MayDay.jpg" width="90%" height="auto" alt="West Sound DSA rallying for May Day 2024!" />
