--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@ layout: default
       <h1>{{ welcome }}</h1>
       <hr class="large" />
       <p>{{ about }}</p>
-      <a href="/get-involved" class="btn btn-secondary">Get Involved <i class="fa fa-arrow-right"></i></a>
+		<a href="/get-involved" class="btn btn-primary">Get Involved <i class="fa fa-arrow-right"></i></a>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
       <img src="assets/images/WestSoundDSA_MayDay.jpg" width="90%" height="auto" alt="West Sound DSA rallying for May Day 2024!" />
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-12 text-center">
       <i class="fa fa-arrow-down my-5 text-red"></i>
     </div>
-  </div>
+  </div> -->
   <div class="row">
     <div class="col-12">
       <h3 class="my-5">Recent Statements</h2>
     </div>
+	{% if site.posts.size == 0 %}
+	<div class="col-12">
+		<p>West Sound DSA blog coming soon!</p>
+	</div>
+	{% endif %}
     {% for post in site.posts limit:3 %}
     <div class="col-12">
       <h6 class="my-0 text-black-tint-2">{{ post.date | date: "%b %-d, %Y" }}</h6>
