--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 {% assign welcome = site.data.copy.global.welcome %}
 
 <div class="container my-5">
-  <div class="row align-items-center" style="gap: 1rem">
+  <div class="row align-items-center">
     <div class="col-md-6 col-sm-12">
       <h1>{{ welcome }}</h1>
       <hr class="large" />
