--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
     </div>
 	{% if site.posts.size == 0 %}
 	<div class="col-12">
-		<p>West Sound DSA blog coming soon!</p>
+		<h3> [West Sound DSA Stands In Solidarity With The Transgender Community](../blog)</h3>
 	</div>
 	{% endif %}
     {% for post in site.posts limit:3 %}
