--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ layout: default
     </div>
 	{% if site.posts.size == 0 %}
 	<div class="col-12">
-		<h4> [West Sound DSA Stands In Solidarity With The Transgender Community](../blog)</h3>
+		<h4> [West Sound DSA Stands In Solidarity With The Transgender Community](../blog)
+		<a href="/blog" class="btn btn-primary">Recent Statements <i class="fa fa-arrow-right"></i></a></h3>
 	</div>
 	{% endif %}
     {% for post in site.posts limit:3 %}
