--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 		<a href="/get-involved" class="btn btn-primary">Get Involved <i class="fa fa-arrow-right"></i></a>
     </div>
     <div class="col-md-6 col-sm-12 text-right">
-      <img src="assets/images/WestSoundDSA_MayDay.jpg" width="30%" height="auto" alt="West Sound DSA rallying for May Day 2024!" />
+      <img src="assets/images/wsdsa_logo_transparent_black (2).png" width="60%" height="auto" alt="West Sound DSA Transparent Logo!" />
     </div>
   </div>
   <!-- <div class="row">
